# biolm-hub

./: .env.example  .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_WORK.md  LICENSE  Makefile  PHILOSOPHY.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_model.yml
.github/scripts/: analyze_commons_dependencies.py  ci_utils.py  detect_models.py  test_analyze_commons_dependencies.py  test_ci_utils.py  test_detect_models.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
.planning/: 00_MASTER_PLAN.md  01_INVESTIGATION_FINDINGS.md  02_MODEL_INCLUSION_MATRIX.md  03_WORKSTREAMS.md  04_TESTING_STRATEGY.md  COMMONS_REQUESTS.md  FABLE_HANDOFF.md  MAINTAINER_LAUNCH_CHECKLIST.md  MILESTONE_B_PLAN.md  MILESTONE_B_PROGRESS.md  README.md  RELEASE_ROADMAP.md  REMAINING_WORK.md  RENAME_TO_BIOLM_HUB.md  W4_ACQUISITION_PLAN.md  W5_HARDENING_GUIDE.md  W_LAUNCH_STAGING.md  extract_from_internal.py
.planning/final-review/: ISSUES.md  SUMMARY.md
cli/: README.md  cache.py  deploy.py  kb.py  main.py  mcp.py  r2.py  serve.py  setup.py  test_deploy.py  test_kb.py
docs/: _docgen.py  api.md  gen_pages.py  index.md  mcp.md  quickstart.md  test_docgen.py
docs/media/: README.md  architecture.md  hero.tape  uniformity.md
gateway/: README.md  analytics.py  app.py  auth.py  auth_mock.py  billing.py  config.py  deploy_gateway.py  gateway.py  gateway_with_cache.py  middleware.py  model_discovery.py  routing.py  server.py  server_with_cache.py  shared_state.py  state_manager.py  test_catalog.py  test_deployment.py  test_discovery.py  test_knowledge_route.py
gateway/catalog/: deployment_status.py  generator.py  mount.py
gateway/mcp/: README.md  __init__.py  _sdk.py  catalog.py  compose.py  deploy_mcp.py  invoke.py  server.py  test_compose.py  test_invoke.py  test_server.py  test_stdio.py  test_uniformity.py
gateway/schemas/: introspection.py
models/: README.md  conftest.py
models/ablang2/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/abodybuilder3/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  environment_gpu.yml  fixture.py  pinned-versions.txt  schema.py  sources.yaml  test.py
models/antifold/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  test_distinct_generate.py
models/biotite/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  fixture.py  schema.py  sources.yaml  test.py
models/boltz/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  test_unit.py  utils.py
models/boltzgen/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  helpers.py  output_delivery.py  pipeline.py  schema.py  sources.yaml  test.py  test_unit.py
models/chai1/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  test_edge_case.py
models/chemberta/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/clean/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  util.py
models/commons/: README.md  __init__.py  parquet_utils.py  pubsub.py
models/deepviscosity/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  test_unit.py  util.py
models/dna_chisel/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  fixture.py  schema.py  sources.yaml  test.py
models/dnabert2/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/dsm/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/dummy/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  fixture.py  schema.py  sources.yaml  test.py
models/e1/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/esm1b/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/esm1v/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  test_schema_strictness.py
models/esm2/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py  test_schema_strictness.py
models/esm_if1/: BIOLOGY.md  LICENSE  MODEL.md  README.md  _sample_sequences.py  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/esmc/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/esmfold/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/esmstabp/: BIOLOGY.md  LICENSE  MODEL.md  README.md  _train.py  app.py  comparison.yaml  config.py  download.py  fixture.py  schema.py  sources.yaml  test.py
models/evo/: BIOLOGY.md  LICENSE  MODEL.md  README.md  app.py  comparison.yaml  (+6 more)
tooling/: check_no_modal_volumes.py  check_schema_docs.py  field_glossary.yaml  gen_model_catalog.py  test_model_catalog.py  test_no_modal_volumes.py  test_schema_docs.py
(+426 files in other folders)
