[project]
name = "biolm-hub"
version = "0.1.0"
description = "A standardized, agent-first catalog of open biological ML models that deploy on Modal in a couple of commands."
authors = [{ name = "BioLM" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "Apache-2.0"
keywords = ["bioinformatics", "machine-learning", "protein", "modal", "esm", "agents"]

# The core infrastructure every model shares at runtime.
dependencies = [
    "modal==1.5.2",
    "boto3>=1.35.60,<2.0.0",
    "biopython>=1.84,<2.0.0",
    "orjson>=3.10.11,<4.0.0",
    "pydantic==2.13.4",
    "pyyaml>=6.0,<7.0",  # knowledge-graph loader + `bh kb` read sources/comparison YAML
    "rich>=13.9.4,<16.0.0",
    "typer>=0.13.1,<1.0.0",
]

[project.optional-dependencies]
# Local web app for `bh serve` (catalog UI + in-process routing). Opt-in so the
# core CLI stays light: `pip install "biolm-hub[serve]"`. fastapi is pinned to
# match the gateway's Modal image (gateway/server.py + gateway/server_with_cache.py) —
# keep the two version pins in lockstep. The catalog generator introspects FastAPI
# route internals (gateway/catalog/generator.py) via route.body_field.field_info
# .annotation (the modern replacement for the removed route.body_field.type_).
serve = [
    "fastapi==0.139.0",
    "uvicorn>=0.30.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
]

# MCP server (`bh mcp`) — surfaces the catalog (knowledge graphs + per-action schemas) over the
# Model Context Protocol so agents can probe and compose model pipelines. Opt-in:
# `pip install "biolm-hub[mcp]"`. The SDK bundles its own FastMCP server + a Streamable-HTTP ASGI
# app (uvicorn, in the [serve] extra, hosts `bh mcp --http`). Pinned exact; a v2 rename is imminent
# and the import is quarantined in gateway/mcp/_sdk.py.
mcp = [
    "mcp==1.28.1",
]

# Documentation site (`make docs`). The site is generated at build time from each
# model's config + knowledge graph by docs/gen_pages.py — there are no committed
# per-model doc pages to keep in sync. Opt-in: `pip install "biolm-hub[docs]"`.
docs = [
    "mkdocs-material>=9.5.0,<10.0.0",
    # pinned for reproducible doc builds
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.3",
    "pyyaml>=6.0,<7.0",
]

dev = [
    "black>=24.10.0,<27.0.0",
    # mypy floor >=1.14: 1.5.1 hard-crashes analyzing numpy 2.x stubs. mypy --strict
    # is a blocking CI gate (0 errors across the repo).
    "mypy>=1.14",
    "pytest>=7.4.4,<10.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pytest-asyncio>=0.23.6",
    "pre-commit>=3.8.0,<5.0.0",
    "ruff>=0.6.9,<0.16.0",
    "requests>=2.32.4,<3.0.0",
    "httpx>=0.27.0,<1.0.0",  # FastAPI TestClient (gateway/test_catalog.py)
    "pandas>=2.0,<4.0",  # boltzgen pure-function unit tests (models/boltzgen/test_unit.py)
]

mypy-types = [
    "types-pyyaml>=6.0.12.11,<7.0.0",
    "types-requests>=2.32.0.0,<3.0.0",
]

[project.scripts]
bh = "cli.main:app"

[project.urls]
Homepage = "https://github.com/BioLM/biolm-hub"
Documentation = "https://github.com/BioLM/biolm-hub"
Repository = "https://github.com/BioLM/biolm-hub"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "models*", "gateway*"]
exclude = ["tests*", "*.tests*", "external*", "*.external*"]

[tool.black]
target-version = ["py312"]
line-length = 88
quiet = true
extend-exclude = '''
/(
    \.direnv
  | \.venv
  | build
  | dist
  | __pycache__
  | external
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = '(^|/)(external|\.venv|build|dist|docs|tooling|scratchpad)/'

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: full local app run against Modal (slower; needs a Modal env + R2)",
    "deployment: runs against a live deployed endpoint",
    "slow: full end-to-end correctness (minutes; run before releases)",
    "e2e: end-to-end system validation",
    "live_modal: invokes a live Modal app runner",
    "no_parallel: cannot run in parallel (timing-sensitive or shared state)",
]
filterwarnings = [
    "ignore:Pydantic V1 style `@validator`.*:pydantic.PydanticDeprecatedSince20",
]

[tool.coverage.run]
branch = true
source = ["models", "gateway", "cli"]
omit = ["*tests*", ".venv/*", "*/external/*"]

[tool.coverage.report]
# Coverage is a local diagnostic (`make test-unit` and CI both pass --no-cov for
# speed), not an enforced gate. Run `uv run pytest` without --no-cov to see a
# report with missing lines.
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
extend-exclude = ["external", "build", "dist"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "C90", # mccabe complexity
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "T20", # flake8-print — ban print() in runtime code (house rule)
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line length is handled by black
    "UP007", # keep Optional/Union spelling stable across the codebase
]

[tool.ruff.lint.per-file-ignores]
# print() is allowed in the CLI, one-off scripts, and tests — banned everywhere else.
# Test files (and the fixture/runner harness they import) are not runtime/inference
# code, so progress prints there are output, not the banned runtime logging anti-pattern.
"cli/**" = ["T20"]
"tooling/**" = ["T20"]
"**/scripts/**" = ["T20"]
"**/test*.py" = ["T20"]
"**/conftest.py" = ["T20"]
